# trade-game

./: .gitignore  LICENSE  build.sh  index.html  style.css  trade-game.cabal
bot/: Main.hs
client/: driver.js  index.html
client/src/: ByResource.elm  LocationParser.elm  Main.elm  Model.elm  Msg.elm  Ports.elm  Resource.elm  Serialize.elm  Trade.elm  View.elm
client/src/View/: PlayerTable.elm  ResourceTable.elm  Style.elm
protocol/: Protocol.hs
server/: Game.hs  Main.hs  Trade.hs  build.sh  doctests.hs  spec-game-server.cabal  trade-game-server.cabal
server/static-root/: driver.js  elm.js  index.html
src/: ByResource.elm  Main.elm  Model.elm  Msg.elm  View.elm
src/View/: PlayerTable.elm  ResourceTable.elm
web-client/: build.sh  driver.js
web-client/src/: ByDir.elm  LocationParser.elm  Main.elm  Model.elm  Msg.elm  Ports.elm  Resource.elm  View.elm
