cabal-version:       2.4

name:                trade-game
version:             0.1.0.0
synopsis:            Server for a game with trading
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ben Millwood
maintainer:          thebenmachine+git@gmail.com
-- copyright:
-- category:
-- extra-source-files:

library
  exposed-modules:
    Protocol
  ghc-options:         -Wall
  build-depends:
    aeson,
    base,
    lens
  hs-source-dirs:      protocol
  default-language:    Haskell2010

executable trade-game-server
  main-is:             Main.hs
  other-modules:       Game Trade
  -- other-extensions:
  ghc-options:         -Wall
  build-depends:
    trade-game,
    aeson,
    async,
    base,
    bytestring,
    containers,
    lens,
    wai,
    wai-app-static,
    wai-websockets,
    warp,
    websockets
  hs-source-dirs:      server
  default-language:    Haskell2010

executable trade-game-bot
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:         -Wall
  build-depends:
    trade-game,
    aeson,
    async,
    base,
    bytestring,
    containers,
    lens,
    websockets
  hs-source-dirs:      bot
  default-language:    Haskell2010
