cabal-version:       2.4

name:                spec-game-server
version:             0.1.0.0
synopsis:            Server for the specialization game
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ben Millwood
maintainer:          thebenmachine+git@gmail.com
-- copyright:
-- category:
-- extra-source-files:

executable spec-game-server
  main-is:             Main.hs
  other-modules:       Game
  -- other-extensions:
  build-depends:
    aeson, base, bytestring, containers, websockets
  -- hs-source-dirs:
  default-language:    Haskell2010
