cabal-version:       2.4

name:                trade-game-server
version:             0.1.0.0
synopsis:            Server for a game with trading
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ben Millwood
maintainer:          thebenmachine+git@gmail.com
-- copyright:
-- category:
-- extra-source-files:

executable trade-game-server
  main-is:             Main.hs
  other-modules:       Game
  -- other-extensions:
  build-depends:
    aeson,
    async,
    base,
    bytestring,
    containers,
    wai,
    wai-app-static,
    wai-websockets,
    warp,
    websockets
  -- hs-source-dirs:
  default-language:    Haskell2010
